examples/stress-test/errors/bad-undefined.mds
---
known_var: hello
---

{known_var} and {unknown_var}
